# OPNB_to_OPN2

./: README.md
YM2610_to_YM2612_Release_v1.0/: CMakeLists_ym2610player.txt  README.md  RELEASE_NOTES.md  使用说明.txt
YM2610_to_YM2612_Release_v1.0/docs/: README_CN.md  项目完成报告_FINAL.md
YM2610_to_YM2612_Release_v1.0/src/: CommandMapper.cpp  WAVWriter.h  main.cpp  vgm2wav_adpcm_only.cpp  wav_subtract.cpp
YM2610_to_YM2612_v2.0_Release/: CHANGELOG.md  CMakeLists_vgm2wav.txt  QUICK_START.txt  README.md
YM2610_to_YM2612_v2.0_Release/docs/: RELEASE_NOTES_v1.1.md  RELEASE_NOTES_v1.2.md  RELEASE_NOTES_v1.3.md  RELEASE_NOTES_v2.0.md
YM2610_to_YM2612_v2.0_Release/libvgm/: stdbool.h
YM2610_to_YM2612_v2.0_Release/scripts/: convert_batch_fixed.sh
YM2610_to_YM2612_v2.0_Release/src/: CommandMapper.cpp  CommandMapper.h  VGMReader.cpp  VGMWriter.cpp  VGMWriter.h  archive_utils.cpp
YM2610_to_YM2612_v2.5_Release/: BUILD.md  README.md  RELEASE_NOTES.md  VERSION.txt  convert_complete.sh
YM2610_to_YM2612_v2.5_Release/00_source/: CMakeLists.txt
YM2610_to_YM2612_v2.5_Release/00_source/src/: CommandMapper.cpp  VGMValidator.cpp  VGMValidator.h  main.cpp  main_fm_only.cpp  main_with_dac.cpp  wavanalyzer.cpp  ym2610player.cpp
YM2610_to_YM2612_v2.6_Release/: README.md  RELEASE_NOTES.md  VERSION.txt  convert_complete.sh
converted_vgms/Aero_Fighters_3_(Neo_Geo)_YM2612/: 01 Neo Geo Opening Theme.vgm  02 Video System.vgm  04 Coin.vgm  05 Overture (Player Select).vgm  08 It's A Sonic Jingle 1 (Stage Clear 1).vgm  25 It's A Sonic Jingle 2 (Stage Clear 2).vgm  26 Queer A Player Piano (Ending).vgm  27 Illusion - Short Version - (Name Entry).vgm
converted_vgms/Metal_Slug_(Neo_Geo)_YM2612/: 00 Neo-Geo Logo.vgm  01 TITLE (Opening) ~ Nazca Logo.vgm  05 Stage Clear.vgm  13 Game Over.vgm
converted_vgms/Metal_Slug_2_(SNK_Neo_Geo)_YM2612/: 01 Neo Geo Logo.vgm  02 The Military System.vgm  03 Barracks.vgm  15 Gravestone.vgm  17 End Title Again.vgm  18 Carry Out.vgm
converted_vgms/Metal_Slug_3_(SNK_Neo_Geo)_YM2612/: 01 Neo Geo Logo (Nazca Ver.).vgm  02 The Military System (Operation Explanation, Ranking).vgm  03 Barracks (Character Select).vgm  28 Gravestone (Game Over).vgm  29 Carry Out (Stage Clear).vgm
converted_vgms/Metal_Slug_4_(Neo_Geo)_YM2612/: 01 Declare War (Opening Demo).vgm  02 The Military System (Operation Explanation, Ranking).vgm  03 Choose a Person (Player Select).vgm  06 Carry Out (Stage Clear).vgm  13 Uncanny Laugh (Last Boss First Part).vgm  15 Escape (Demo After Defeating the Last Boss).vgm  16 Good Ending.vgm  17 Bad Ending.vgm  19 Gravestone (Game Over).vgm
converted_vgms/Metal_Slug_5_(Neo_Geo)_YM2612/: 01 The Military System.vgm  02 Sortie!.vgm  14 Carry Out.vgm  16 Gravestone.vgm
converted_vgms/Metal_Slug_X_(Neo_Geo)_YM2612/: 01 Neo Geo Logo.vgm  02 The Military System -X-.vgm  03 Barracks -X-.vgm  19 Carry Out -X-.vgm
converted_vgms/Metal_Slug_X_(SNK_Neo_Geo)_YM2612/: 15 Gravestone -X-.vgm  17 End Title Again -X-.vgm
converted_vgms/Puzzle_Bobble_2_(Neo_Geo)_YM2612/: 01 Title Demo.vgm  03 Oppekepe no Pe~ (Demo).vgm  05 Round Clear.vgm  08 Continue.vgm  09 Bye Bye Gokkun (Name Register).vgm  14 All Round Clear.vgm  16 Game Over.vgm
(+255 files in other folders)
